# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: ci-tests.yml
page_analyzer/: app.py  page.py  url.py
page_analyzer/templates/: error.html  index.html  url.html  urls.html
