[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
authors = ["Alexey-Shepelev <alexey.sailor@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.8.14"
flask = "^2.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
flake8 = "^6.0.0"
psycopg2-binary = "^2.9.5"
validators = "^0.20.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"

[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"
